<resources>
    <string name="app_name">SigniCatTest</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Register User</string>
    <string name="second_fragment_label">Login</string>
    <string name="third_fragment_label">User</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="delete">Delete User</string>
    <string name="user">User</string>
    <string name="user_name">Username</string>
    <string name="pin">Pin</string>
    <string name="pin_missing">Please add pin</string>
    <string name="user_missing">Please add username</string>
    <string name="both_missing">Please add username and pin</string>
    <string name="registration_success">User registration successful</string>
    <string name="delete_success">User deletion successful</string>

    <string name="preferences">SigniCatPreferences</string>
    <string name="user_key">SigniCatUser</string>
    <string name="pin_key">SigniCatPin</string>

    <string name="text_first_fragment">Please register a user with a pin</string>
    <string name="text_second_fragment">Please login using your pin</string>
    <string name="text_third_fragment">Hello second fragment. Arg: %1$s</string>
</resources>